--- a/frontend/src/styles/LoadingScreen.css
+++ b/frontend/src/styles/LoadingScreen.css
@@ -5,17 +5,17 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.9); /* Light background */
+    background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 9999; /* Ensure it’s on top */
+    z-index: 9999;
   }
   
   .spinner {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #00ACC1; /* Teal color */
+    border: 8px solid #f3f3f3; 
+    border-top: 8px solid #00ACC1; 
     border-radius: 50%;
     width: 60px;
     height: 60px;
@@ -30,6 +30,7 @@
   .spinner > p{
     margin-top: 20px;
     font-size: 18px;
-    color: #00ACC1; /* Teal color for text */
+    color: #00ACC1;
   }
   
+
